--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,9 @@
     <meta property="og:image" content="https://github.com/Adihang/portfolio_with_django/assets/56463432/85411b54-68be-4ece-b21f-b531794020c0">
     <link rel="icon" href="{% static 'favicon.png' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}?v=20260216_nav_theme_20">
     <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/script.js' %}?v=20260216_nav_auto_8" type="text/javascript"></script>
     <!-- 채팅 위젯 스타일 -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/chat_widget.css' %}">
     <title>Hanbyel's Portfolio</title>
@@ -29,12 +29,12 @@
 </head>
 <body>
     <!-- 네비게이션바 -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+    <nav class="navbar navbar-expand portfolio-nav">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'main:main' %}">
-                Hanbyel's Portfolio
+            <a class="navbar-brand portfolio-brand" href="{% url 'main:main' %}">
+                <span class="portfolio-brand-text">Hanbyel's Portfolio</span>
             </a>
-            <button class="navbar-toggler" type="button"
+            <button class="navbar-toggler portfolio-nav-toggler" type="button"
                     data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent"
@@ -43,15 +43,15 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto mb-0 portfolio-nav-links">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/Adihang">GitHub</a>
+                        <a class="nav-link portfolio-nav-link" href="https://github.com/Adihang">GitHub</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.thingiverse.com/hanbyel/designs">Thingiverse</a>
+                        <a class="nav-link portfolio-nav-link" href="https://www.thingiverse.com/hanbyel/designs">Thingiverse</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Stratagem_Hero/">Mini Game</a>
+                        <a class="nav-link portfolio-nav-link" href="/Stratagem_Hero/">Mini Game</a>
                     </li>
                 </ul>
             </div>
