--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,25 @@
 <!doctype html>
 <html lang="ko">
 <head>
+    <style>
+        html.preload-light-bg,
+        html.preload-light-bg body {
+            background: #ffffff !important;
+            background-image: none !important;
+        }
+    </style>
+    <script>
+        (function () {
+            const path = window.location.pathname;
+            const shouldUseLightBg = path === '/portfolio/' ||
+                path === '/portfolio' ||
+                path.startsWith('/project/');
+
+            if (shouldUseLightBg) {
+                document.documentElement.classList.add('preload-light-bg');
+            }
+        })();
+    </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
@@ -18,16 +37,16 @@
     <meta property="og:image" content="https://github.com/Adihang/portfolio_with_django/assets/56463432/85411b54-68be-4ece-b21f-b531794020c0">
     <link rel="icon" href="{% static 'favicon.png' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}?v=20260216_nav_theme_21">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/script.js' %}?v=20260216_nav_auto_8" type="text/javascript"></script>
+    <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
     <!-- 채팅 위젯 스타일 -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/chat_widget.css' %}">
     <title>Hanbyel's Portfolio</title>
     <!-- CSRF Token for AJAX -->
     <meta name="csrf-token" content="{{ csrf_token }}">
 </head>
-<body>
+<body class="{% block body_class %}{% endblock %}">
     <!-- 네비게이션바 -->
     <nav class="navbar navbar-expand portfolio-nav">
         <div class="container-fluid">
@@ -60,6 +79,6 @@
     {% block content %}
     {% endblock %}
     <!-- 채팅 위젯 -->
-    <script src="{% static 'js/chat_widget.js' %}?v=20260215_2306" type="text/javascript"></script>
+    <script src="{% static 'js/chat_widget.js' %}" type="text/javascript"></script>
 </body>
 </html>
