--- a/templates/main.html
+++ b/templates/main.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
         </div>
-        <img class = "profile_img" src="/media/profile.jpg"/>
+        <img class = "profile_img" src="/media/profile_removebg.png"/>
     </div>
     <div class = "main_contents">
         <hr>
