--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static static_versioned %}
 
 <!doctype html>
 <html lang="ko">
@@ -27,6 +27,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Django로 작성한 포트폴리오 입니다.">
     <meta name="author" content="Hanbyel">
@@ -35,13 +36,14 @@
     <meta property="og:title" content="Hanbyel's Portfolio">
     <meta property="og:description" content="Django로 작성한 포트폴리오 입니다.">
     <meta property="og:image" content="https://github.com/Adihang/portfolio_with_django/assets/56463432/85411b54-68be-4ece-b21f-b531794020c0">
-    <link rel="icon" href="{% static 'favicon.png' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+    {% include "partials/static_script_fallback.html" %}
+    <link rel="icon" href="{% static_v 'favicon.png' %}">
+    <link rel="stylesheet" type="text/css" href="{% static_v 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static_v 'css/style.css' %}">
+    <script src="{% static_v 'js/bootstrap.min.js' %}" type="text/javascript" defer onerror="window.__reloadStaticScript(this)"></script>
+    <script src="{% static_v 'js/script.js' %}" type="text/javascript" defer onerror="window.__reloadStaticScript(this)"></script>
     <!-- 채팅 위젯 스타일 -->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/chat_widget.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static_v 'css/chat_widget.css' %}">
     <title>Hanbyel's Portfolio</title>
     <!-- CSRF Token for AJAX -->
     <meta name="csrf-token" content="{{ csrf_token }}">
@@ -79,6 +81,6 @@
     {% block content %}
     {% endblock %}
     <!-- 채팅 위젯 -->
-    <script src="{% static 'js/chat_widget.js' %}" type="text/javascript"></script>
+    <script src="{% static_v 'js/chat_widget.js' %}" type="text/javascript" defer onerror="window.__reloadStaticScript(this)"></script>
 </body>
 </html>
