--- a/templates/fun/Salvations_Edge_4.html
+++ b/templates/fun/Salvations_Edge_4.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static static_versioned %}
 
 <!doctype html>
 <html lang="ko">
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
         <!-- Required meta tags -->
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="구원의 경계 4네임드 계산기">
         <meta name="author" content="Hanbyel">
@@ -16,11 +17,12 @@
         <meta property="og:title" content="구원의 경계 4네임드 계산기">
         <meta property="og:description" content="능지박살 아이익 전용">
         <meta property="og:image" content="https://github.com/Adihang/portfolio_with_django/assets/56463432/14fcd76f-770a-4c42-9e94-06aaa73efe5e">
-        <link rel="icon" href="{% static 'favicon.png' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/salvations_edge_style.css' %}">
-        <script src="{% static 'js/salvations_edge_4.js' %}" type="text/javascript"></script>
+        {% include "partials/static_script_fallback.html" %}
+        <link rel="icon" href="{% static_v 'favicon.png' %}">
+        <link rel="stylesheet" type="text/css" href="{% static_v 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static_v 'css/style.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static_v 'css/salvations_edge_style.css' %}">
+        <script src="{% static_v 'js/salvations_edge_4.js' %}" type="text/javascript" defer onerror="window.__reloadStaticScript(this)"></script>
         <title>
             구원의 경계 4네임드 계산기</title>
     </head>
