--- a/templates/fun/Stratagem_Hero.html
+++ b/templates/fun/Stratagem_Hero.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static static_versioned %}
 
 <!doctype html>
 <html lang="ko">
@@ -9,6 +9,7 @@
         <!-- Required meta tags -->
         <meta name="csrf-token" content="{{ csrf_token }}">
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="Helldivers Mini Game">
         <meta name="author" content="Hanbyel">
@@ -17,11 +18,12 @@
         <meta property="og:title" content="Stratagem Hero">
         <meta property="og:description" content="Helldivers Mini Game">
         <meta property="og:image" content="https://github.com/Adihang/portfolio_with_django/assets/56463432/484730d2-3edb-47ee-b598-206096312261">
-        <link rel="icon" href="{% static 'favicon.png' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/stratagem_style.css' %}">
-        <script src="{% static 'js/stratagem.js' %}" type="text/javascript"></script>
+        {% include "partials/static_script_fallback.html" %}
+        <link rel="icon" href="{% static_v 'favicon.png' %}">
+        <link rel="stylesheet" type="text/css" href="{% static_v 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static_v 'css/style.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static_v 'css/stratagem_style.css' %}">
+        <script src="{% static_v 'js/stratagem.js' %}" type="text/javascript" defer onerror="window.__reloadStaticScript(this)"></script>
         <title>
             Stratagem Hero</title>
     </head>
