--- a/templates/main/ProjectDetail.html
+++ b/templates/main/ProjectDetail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block body_class %}project-page{% endblock %}
 {% block content %}
-{% load static %}
+{% load static static_versioned %}
 <style>
     html,
     body {
@@ -9,7 +9,7 @@
         background-image: none !important;
     }
 </style>
-<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static_v 'css/style.css' %}">
 <div class="project_detail_page">
     <div class="project_detail">
         <h1 class="project_detail_title">{{ project.title }}</h1>
