--- a/templates/none.html
+++ b/templates/none.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static static_versioned %}
 
 <!doctype html>
 <html lang="ko">
@@ -28,6 +28,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Django">
     <meta name="author" content="Hanbyel">
@@ -36,12 +37,13 @@
     <meta property="og:title" content="공사중">
     <meta property="og:description" content="Django">
     <meta property="og:image" content="https://github.com/Adihang/portfolio_with_django/assets/56463432/85411b54-68be-4ece-b21f-b531794020c0">
-    <link rel="icon" href="{% static 'favicon.png' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/salvations_edge_style.css' %}">
-    <script src="{% static 'js/bootstrap.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+    {% include "partials/static_script_fallback.html" %}
+    <link rel="icon" href="{% static_v 'favicon.png' %}">
+    <link rel="stylesheet" type="text/css" href="{% static_v 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static_v 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static_v 'css/salvations_edge_style.css' %}">
+    <script src="{% static_v 'js/bootstrap.min.js' %}" type="text/javascript" defer onerror="window.__reloadStaticScript(this)"></script>
+    <script src="{% static_v 'js/script.js' %}" type="text/javascript" defer onerror="window.__reloadStaticScript(this)"></script>
     <title>
         공사중</title>
 </head>
