--- a/templates/main/ProjectDetail.html
+++ b/templates/main/ProjectDetail.html
@@ -2,11 +2,11 @@
 {% block body_class %}project-page{% endblock %}
 {% block content %}
 {% load static static_versioned %}
-<style>
+<style data-surface-light="project-detail">
     html,
     body {
-        background: #ffffff !important;
-        background-image: none !important;
+        background: #ffffff;
+        background-image: none;
     }
 </style>
 <link rel="stylesheet" type="text/css" href="{% static_v 'css/style.css' %}">
